--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Gulp starter pack",
+  "name": "gulp-starter-pack",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
