--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-rename": "^1.2.3",
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.1",
+    "gulp-sass-glob": "^1.0.9",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-svg-sprite": "^1.4.0",
     "gulp-svgmin": "^1.2.4",
